--- a/asset/css/webface.css
+++ b/asset/css/webface.css
@@ -86,9 +86,7 @@
     background: #87794E;
 }
 
- .bgcolor-dark  {
-     background: #3e444d;
- }
+
 .bgcolor-darken  {
     background: #1d1d1d;
 }
@@ -100,16 +98,26 @@
 .txtcolor-white {
     color: #ffffff;
 }
+/**********************************/
+
+.bgcolor-dark  {
+    background: #3e444d;
+}
 
 .navbar-default {
-    margin-top: 1.5%;
     border-color: transparent;
-    /*background-color: #222;*/
-    background: rgba(240, 240, 240, 0.35);
-
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.275);
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.275)
+    background-color: #2C3E50;
 }
+
+/*.navbar-default {*/
+    /*margin-top: 1.5%;*/
+    /*border-color: transparent;*/
+    /*background-color: #222;*/
+    /*background: rgba(240, 240, 240, 0.35);*/
+
+    /*-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.275);*/
+    /*box-shadow: 0 0 4px rgba(0, 0, 0, 0.275)*/
+/*}*/
 
 .navbar-default .navbar-collapse {
     border-color: rgba(255, 255, 255, .12);
@@ -142,7 +150,8 @@
     font-size: 1.5em;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #000;
+    color: #fff;
+    padding: 20px;
 }
 
 .navbar-default .nav li a:hover,
@@ -162,21 +171,6 @@
     background-color: #000;
 }
 
-@media(min-width:768px) {
-    .navbar-default {
-        border: 0;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
-    }
-
-    /*.navbar-default .navbar-nav>.active>a {*/
-        /*border-radius: 3px;*/
-    /*}*/
-
-}
-
-
 header {
     text-align: center;
     color: #fff;
@@ -185,6 +179,45 @@ header {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+header .container {
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+@media(min-width:768px) {
+
+    .navbar-default {
+        border: 0;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
+
+    header .container {
+        padding-top: 160px;
+        padding-bottom: 100px;
+    }
+
+    /*.navbar-default .navbar-nav>.active>a {*/
+        /*border-radius: 3px;*/
+    /*}*/
+
+}
+
+#about {
+    color: #fff;
+    background-color: #18bc9c;
+}
+
+.avatar {
+    /*max-height: 400px;*/
+    /*max-width: 400px;*/
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
 }
 
 p {
@@ -221,85 +254,6 @@ section h3.section-subheading {
         padding: 130px 0;
     }
 }
-
-
-#section_c .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
-
-#section_c .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
-
-#section_c .portfolio-item .portfolio-link .portfolio-hover {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba(80,80,80,.7);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#section_c .portfolio-item .portfolio-link .portfolio-hover:hover {
-    opacity: 1;
-}
-
-#section_c .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    font-size: 20px;
-    color: #fff;
-}
-
-#section_c .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
-    margin-top: -12px;
-}
-
-#section_c .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#section_c .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
-    margin: 0;
-}
-
-#section_c .portfolio-item .portfolio-caption {
-    margin: 0 auto;
-    padding: 25px;
-    max-width: 400px;
-    text-align: center;
-    background-color: #fff;
-}
-
-#section_c .portfolio-item .portfolio-caption h4 {
-    margin: 0;
-    text-transform: none;
-}
-
-#section_c .portfolio-item .portfolio-caption p {
-    margin: 0;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    font-style: italic;
-}
-
-#section_c * {
-    z-index: 2;
-}
-
-@media(min-width:767px) {
-    #section_c .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
-
 
 
 h1,
@@ -351,6 +305,13 @@ hr {
     border: solid 2px #fff;
     color: #1BA1E2;
     background: #fff;
+}
+
+
+footer {
+    color: #fff;
+    padding: 25px 0;
+    background-color: #2C3E50;
 }
 
 /* form*/
@@ -411,11 +372,6 @@ form .row:first-child .floating-label-form-group {
 }
 
 
-footer {
-    color: #fff;
-    padding: 25px 0;
-    background-color: #233140;
-}
 
 .animated {
     -webkit-animation-duration: .5s;
