add new protrait photo; ajust page frame

--- a/asset/css/webface.css
+++ b/asset/css/webface.css
@@ -15,99 +15,6 @@
     margin: 0 !important;
 }
 
-/* windows 8 color */
-
-.bgcolor-teal-dark {
-    background: #008299;
-}
-.bgcolor-teal-light {
-    background: #00A0B1;
-}
-.bgcolor-blue-dark {
-    background: #2672EC;
-}
-.bgcolor-blue-light {
-    background: #2d89ef;
-}
-.bgcolor-purple-dark {
-    background: #8C0095;
-}
-.bgcolor-purple-light {
-    background: #A700AE;
-}
-.bgcolor-red-dark {
-    background: #AC193D;
-}
-.bgcolor-red-light {
-    background: #BF1E4B;
-}
-.bgcolor-orange-dark {
-    background: #D24726;
-}
-.bgcolor-orange-light {
-    background: #FA6800;
-}
-.bgcolor-green-dark {
-    background: #008A00;
-}
-.bgcolor-green-light {
-    background: #00A600;
-}
-.bgcolor-sky-dark {
-    background: #094AB2;
-}
-.bgcolor-sky-light {
-    background: #0A5BC4;
-}
-.bgcolor-lime {
-    background: #A4C400;
-}
-.bgcolor-cyan {
-    background: #1BA1E2;
-}
-.bgcolor-violet {
-    background: #AA00FF;
-}
-.bgcolor-pink {
-    background: #F472D0;
-}
-.bgcolor-amber {
-    background: #F0A30A;
-}
-.bgcolor-yellow {
-    background: #ffc40d;
-}
-.bgcolor-brown {
-    background: #825A2C;
-}
-.bgcolor-olive {
-    background: #6D8764;
-}
-.bgcolor-steel {
-    background: #647687;
-}
-.bgcolor-mauve {
-    background: #76608A;
-}
-
-.bgcolor-taupe {
-    background: #87794E;
-}
-
-
-.bgcolor-darken  {
-    background: #1d1d1d;
-}
-
-.bg-lighter {
-    background-color: #3e444d;
-}
-
-.txtcolor-white {
-    color: #ffffff;
-}
-
-
 /**********************************/
 
 .bg-navfoot {
@@ -120,12 +27,12 @@
     background: #3e444d;
 }
 
-.bg-about {
+.bg-gray {
     background-color: #eee;
 }
 
 .bg-error {
-    background-color: #f1f1f1;
+    background-color: #f0f0f0;
 }
 
 /*.navbar-default {*/
@@ -179,9 +86,9 @@
     background-color: #000;
 }
 
-.navbar-fixed-top .navbar-brand {
-    font-size: 2em;
-    margin-top: 5px;
+.logo {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 header {
@@ -193,7 +100,7 @@ header {
 }
 
 header .container {
-    padding-top: 80px;
+    padding-top: 75px;
     padding-bottom: 50px;
 }
 
@@ -208,27 +115,18 @@ header .container {
     }
 
     header .container {
-        padding-top: 150px;
+        padding-top: 110px;
         padding-bottom: 100px;
     }
 
-    /*.navbar-default .navbar-nav>.active>a {*/
-        /*border-radius: 3px;*/
-    /*}*/
-    .navbar-fixed-top .navbar-brand {
-        font-size: 1.5em;
-        margin-top: 3px;
-    }
 
 }
 
 .avatar {
-    /*max-height: 400px;*/
-    /*max-width: 400px;*/
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    border: 5px solid rgba(255, 255, 255, 0.5);
+    border: 5px solid rgba(120,160,210,0.3);
 }
 
 p, address {
